Change open-api, delete interfaces on rest response
