# back/controller/src/main/java/genealogy/visualizer/controller/FamilyRevisionController.java
@@ -1,16 +1,15 @@
 package genealogy.visualizer.controller;
 
 import genealogy.visualizer.api.FamilyRevisionApi;
-import genealogy.visualizer.api.model.ArchiveWithFamilyRevisionList;
-import genealogy.visualizer.api.model.FamilyRevision;
-import genealogy.visualizer.api.model.FamilyRevisionErrorResponse;
-import genealogy.visualizer.api.model.FamilyRevisionFilter;
-import genealogy.visualizer.api.model.FamilyRevisionResponse;
-import genealogy.visualizer.api.model.FamilyRevisionSave;
+import genealogy.visualizer.api.model.FamilyMember;
+import genealogy.visualizer.api.model.FamilyMemberFilter;
+import genealogy.visualizer.api.model.FamilyMemberFullInfo;
+import genealogy.visualizer.api.model.FamilyMemberSave;
 import genealogy.visualizer.service.family.revision.FamilyRevisionService;
-import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RestController;
+
+import java.util.List;
 
 @RestController
 public class FamilyRevisionController implements FamilyRevisionApi {
@@ -28,52 +27,22 @@ public class FamilyRevisionController implements FamilyRevisionApi {
     }
 
     @Override
-    public ResponseEntity<FamilyRevisionResponse> getById(Long id) {
-        FamilyRevisionResponse result = familyRevisionService.getById(id);
-        return switch (result) {
-            case FamilyRevision f -> ResponseEntity.ok().body(f);
-            case FamilyRevisionErrorResponse e -> getErrorResponse(e);
-            default -> ResponseEntity.internalServerError().build();
-        };
+    public ResponseEntity<FamilyMember> getById(Long id) {
+        return ResponseEntity.ok(familyRevisionService.getById(id));
     }
 
     @Override
-    public ResponseEntity<FamilyRevisionResponse> save(FamilyRevisionSave familyRevisionSave) {
-        FamilyRevisionResponse result = familyRevisionService.save(familyRevisionSave);
-        return switch (result) {
-            case FamilyRevision f -> ResponseEntity.ok().body(f);
-            case FamilyRevisionErrorResponse e -> getErrorResponse(e);
-            default -> ResponseEntity.internalServerError().build();
-        };
+    public ResponseEntity<FamilyMember> save(FamilyMemberSave familyMemberSave) {
+        return ResponseEntity.ok(familyRevisionService.save(familyMemberSave));
     }
 
     @Override
-    public ResponseEntity<FamilyRevisionResponse> update(FamilyRevision familyRevision) {
-        FamilyRevisionResponse result = familyRevisionService.update(familyRevision);
-        return switch (result) {
-            case FamilyRevision f -> ResponseEntity.ok().body(f);
-            case FamilyRevisionErrorResponse e -> getErrorResponse(e);
-            default -> ResponseEntity.internalServerError().build();
-        };
+    public ResponseEntity<FamilyMember> update(FamilyMember familyMember) {
+        return ResponseEntity.ok(familyRevisionService.update(familyMember));
     }
 
     @Override
-    public ResponseEntity<FamilyRevisionResponse> getFamilyRevisionByNum(FamilyRevisionFilter familyRevisionFilter) {
-        FamilyRevisionResponse result = familyRevisionService.getArchivesWithFamilyRevision(familyRevisionFilter);
-        return switch (result) {
-            case ArchiveWithFamilyRevisionList f -> ResponseEntity.ok().body(f);
-            case FamilyRevisionErrorResponse e -> getErrorResponse(e);
-            default -> ResponseEntity.internalServerError().build();
-        };
+    public ResponseEntity<List<FamilyMemberFullInfo>> getFamilyRevisionByNum(FamilyMemberFilter familyMemberFilter) {
+        return ResponseEntity.ok(familyRevisionService.getFamilyMemberFullInfoList(familyMemberFilter));
     }
-
-    private ResponseEntity<FamilyRevisionResponse> getErrorResponse(FamilyRevisionErrorResponse result) {
-        HttpStatus httpStatus = HttpStatus.BAD_REQUEST;
-        if (result == null || result.getCode() == null) {
-            return new ResponseEntity<>(null, httpStatus);
-        }
-        httpStatus = HttpStatus.valueOf(result.getCode());
-        return new ResponseEntity<>(result, httpStatus);
-    }
-
 }
